<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.UpdateSignalFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/signal_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/signal_hz"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:importantForAutofill="no"
            android:inputType="number" />

        <TextView
            android:id="@+id/signal_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signal_type"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/signal_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/signal_option"
            android:checkedButton="@id/brain_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textlayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <RadioButton
                android:id="@+id/brain_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brain"
                />

            <RadioButton
                android:id="@+id/muscle_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/muscle"
                />

            <RadioButton
                android:id="@+id/eyes_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eyes"
                />

        </RadioGroup>

        <TextView
            android:id="@+id/signal_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direction"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/signal_option"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold" />


        <RadioGroup
            android:id="@+id/direction_option"
            android:checkedButton="@id/forward_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/signal_direction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <RadioButton
                android:id="@+id/forward_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forward"
                />

            <RadioButton
                android:id="@+id/left_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left"
                />

            <RadioButton
                android:id="@+id/right_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right"
                />

            <RadioButton
                android:id="@+id/backward_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backward"
                />

        </RadioGroup>

        <RelativeLayout
            android:id="@+id/submitLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/signal_option">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/submit" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="6dp"
                android:layout_toStartOf="@id/submit_button"
                android:layout_toLeftOf="@id/submit_button"
                android:text="@string/cancel" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>