<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp"
        android:background="@drawable/loginbg"
        tools:context=".login.LoginFragment">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageLogo"
            android:layout_width="240dp"
            android:layout_height="230dp"
            android:layout_alignParentStart="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/biopin_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernamelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imageLogo"
            android:layout_margin="8dp"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/usernamelayout"
            android:layout_margin="8dp"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/passwordlayout">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp">
                <View
                    android:layout_width="100dp"
                    android:layout_height="3dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/black" />
                <com.google.android.material.textview.MaterialTextView
                    android:text="@string/or"
                    android:paddingHorizontal="20dp" />
                <View
                    android:layout_width="100dp"
                    android:layout_height="3dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/black" />
            </GridLayout>
            
            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_button"
                android:text="@string/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>