<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.TypeFragment">

        <RadioGroup
            android:id="@+id/signal_option"
            android:checkedButton="@id/brain_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/brain_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brain"
                />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/muscle_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/muscle"
                />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/eyes_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eyes"
                />

        </RadioGroup>

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="93dp"
            android:text="next"
            app:layout_constraintStart_toEndOf="@+id/back_button"
            app:layout_constraintTop_toBottomOf="@+id/signal_option" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="99dp"
            android:text="back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signal_option" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>