<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/faqbg"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.PD">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/twofive"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/faqtitle"
            app:expandedTitleTextColor="@color/white"
            android:background="@drawable/faqbg"
            android:id="@+id/collapsing_toolbar">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView4"
                android:layout_width="166dp"
                android:layout_height="162dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/biopin_logo" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="212dp"
                android:layout_height="230dp"
                android:layout_gravity="center|end"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/biomotive_logo" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/faqshapebg"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/faq1"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:justificationMode="inter_word"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="30dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:text="@string/faq2"
                android:textColor="@color/black"
                android:justificationMode="inter_word"
                android:textSize="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:layout_editor_absoluteX="30dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:text="@string/faq3"
                android:textColor="@color/black"
                android:justificationMode="inter_word"
                android:textSize="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:layout_editor_absoluteX="44dp" />


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/bottom_nav"
            android:visibility="visible"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>