<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardview_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:cardElevation="4dp"
            app:cardCornerRadius="4dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                tools:context=".main.HertzFragment">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/hertz_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/hertz"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginHorizontal="10dp"
                        android:inputType="number"
                        android:hint="@string/hertz"
                        android:importantForAutofill="no"/>

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/cardview_0"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/next" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            app:layout_constraintTop_toBottomOf="@id/cardview_0"
            app:layout_constraintEnd_toStartOf="@id/next_button"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


=======
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.HertzFragment">

        <EditText
            android:id="@+id/hertz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="98dp"
            android:layout_marginTop="288dp"
            android:ems="10"
            android:hint="Hertz"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="93dp"
            android:text="next"
            app:layout_constraintStart_toEndOf="@+id/back_button"
            app:layout_constraintTop_toBottomOf="@+id/hertz" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="99dp"
            android:text="back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hertz" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>